[project]
name = "mutagen"
version = "1.47.1"
description = "read and write audio tags for many formats"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [{ name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }]
license = "GPL-2.0-or-later"
requires-python = ">=3.12, <4"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Multimedia :: Sound/Audio",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://mutagen.readthedocs.io"
Repository = "https://github.com/quodlibet/mutagen"

[project.scripts]
mid3cp = "mutagen._tools.mid3cp:entry_point"
mid3iconv = "mutagen._tools.mid3iconv:entry_point"
mid3v2 = "mutagen._tools.mid3v2:entry_point"
moggsplit = "mutagen._tools.moggsplit:entry_point"
mutagen-inspect = "mutagen._tools.mutagen_inspect:entry_point"
mutagen-pony = "mutagen._tools.mutagen_pony:entry_point"

[dependency-groups]
dev = [
    "pytest>=8.2,<10",
    "hypothesis>=6.148.8,<7",
    "flake8>=7.1.0,<8",
    "mypy==1.19.1",
    "coverage>=7.13.1,<8",
    "setuptools>=80.0.0",
    "ruff>=0.14.10",
]
fuzzing = ["python-afl>=0.7.3,<0.8"]
docs = [
    "Sphinx~=7.1",
    "sphinx-rtd-theme>=2.0.0,<3",
    "sphinx-autobuild>=2021.3.14,<2022",
]

[tool.setuptools]
packages = [
  "mutagen",
  "mutagen.id3",
  "mutagen.mp4",
  "mutagen.asf",
  "mutagen.mp3",
  "mutagen._tools",
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/*.1"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
include=["mutagen/*", "tests/*"]

[tool.pyright]
reportPrivateUsage = false
reportUnusedVariable = false

[tool.ruff]
target-version = "py312"
include = ["mutagen/**/*.py", "tests/**/*.py", "fuzzing/**/*.py", "docs/**/*.py"]
line-length = 320

[tool.ruff.lint]
select = [
    "E", # pycodestyles
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "W", # pycodestyle
    "UP",
    "B",
    "SIM",
]
ignore = [
    # Todo: We should consider fixing these in the future.
    "N801",  # Class name CapWords convention
    "N802",  # Function name lowercase
    "N806",  # Argument name lowercase
    "N803",  # Variable in function lowercase
    "N812",  # imported as non-lowercase
    "N814",  # Consistent naming
    "N815",  # MixedCase variable in function
    "N818",  # Error suffix
    "E741",  # ambiguous variable name
    "E731",  # lambda assigned to variable
]

[tool.ruff.format]
quote-style = 'single'


[tool.mypy]
check_untyped_defs = true
allow_redefinition = true
follow_imports = "silent"
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
disallow_subclassing_any = false
follow_untyped_imports = true
# ignore_missing_imports = false
